add: implement button transitions

--- a/visual/index.html
+++ b/visual/index.html
@@ -138,9 +138,9 @@
     </div><!-- #algorithm_panel -->
 
     <div id="play_panel" class="panel">
-      <button id="start_button">Start Search</button>
-      <button id="stop_button">Stop Search</button>
-      <button id="reset_button">Clear Walls</button>
+      <button id="button1">Start Search</button>
+      <button id="button2">Pause Search</button>
+      <button id="button3">Clear Walls</button>
     </div>
 
     <div id="stats"></div>
