--- a/visual/index.html
+++ b/visual/index.html
@@ -40,7 +40,7 @@
       Click Start Search in the lower-right corner to start the animation.
     </div>
 
-    <div id="algorithm_panel" class="panel">
+    <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
 
       <div class="accordion">
@@ -137,7 +137,7 @@
       </div><!-- .accordion -->
     </div><!-- #algorithm_panel -->
 
-    <div id="play_panel" class="panel">
+    <div id="play_panel" class="panel right_panel">
       <button id="button1">Start Search</button>
       <button id="button2">Pause Search</button>
       <button id="button3">Clear Walls</button>
