--- a/visual/index.html
+++ b/visual/index.html
@@ -138,9 +138,9 @@
     </div><!-- #algorithm_panel -->
 
     <div id="play_panel" class="panel right_panel">
-      <button id="button1">Start Search</button>
-      <button id="button2">Pause Search</button>
-      <button id="button3">Clear Walls</button>
+      <button id="button1" class="control_button">Start Search</button>
+      <button id="button2" class="control_button">Pause Search</button>
+      <button id="button3" class="control_button">Clear Walls</button>
     </div>
 
     <div id="stats"></div>
