mod: re-organize files

--- a/visual/index.html
+++ b/visual/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./lib/themes/jquery.ui.all.css" />
 
     <script type="text/javascript" src="./lib/raphael-min.js"></script>
+    <script type="text/javascript" src="./lib/es5-shim.min.js"></script>
     <script type="text/javascript" src="./lib/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="./lib/modernizr.js"></script>
     <script type="text/javascript" src="./lib/state-machine.min.js"></script>
     <script type="text/javascript" src="./lib/async.min.js"></script>
 
@@ -20,10 +20,13 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.slider.min.js"></script>
 
-    <script type="text/javascript" src="./lib/es5-shim.min.js"></script>
 
     <script type="text/javascript" src="../lib/pathfinding-browser.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
+
+    <script type="text/javascript" src="./js/view.js"></script>
+    <script type="text/javascript" src="./js/controller.js"></script>
+    <script type="text/javascript" src="./js/panel.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
   </head>
   <body>
     <div id="draw_area"></div>
