mod: rebuild gh-pages

--- a/visual/index.html
+++ b/visual/index.html
@@ -152,5 +152,17 @@
       Project Hosted on <a href="http://github.com/qiao/PathFinding.js">Github</a>
     </footer>
 
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-21856083-3']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+       })();
+     </script>
+
   </body>
 </html>
