--- a/visual/index.html
+++ b/visual/index.html
@@ -69,6 +69,8 @@
             <label class="option_label">Allow Diagonal</label> <br>
             <input type="checkbox" class="bi-directional">
             <label class="option_label">Bi-directional</label> <br>
+            <input type="checkbox" class="dont_cross_corners">
+            <label class="option_label">Don't Cross Corners</label> <br>
           </div>
         </div>
 
