Added optional weight to A*
The static weight applied to the heuristic speeds up the algorithm by
allowing A* to search paths that are suboptimal, but no worse than (1+e)
where "e" is the weight supplied. When e = 1, it is the plain-old
vanilla optimal A*.

--- a/visual/index.html
+++ b/visual/index.html
@@ -20,7 +20,6 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.slider.min.js"></script>
 
-
     <script type="text/javascript" src="../lib/pathfinding-browser.js"></script>
 
     <script type="text/javascript" src="./js/view.js"></script>
@@ -71,6 +70,8 @@
             <label class="option_label">Bi-directional</label> <br>
             <input type="checkbox" class="dont_cross_corners">
             <label class="option_label">Don't Cross Corners</label> <br>
+            <input class="spinner" name="astar_weight" value="1">
+            <label class="option_label">Weight</label> <br>
           </div>
         </div>
 
