avoid staircase for A*

--- a/visual/index.html
+++ b/visual/index.html
@@ -70,6 +70,8 @@
             <label class="option_label">Bi-directional</label> <br>
             <input type="checkbox" class="dont_cross_corners">
             <label class="option_label">Don't Cross Corners</label> <br>
+            <input type="checkbox" class="avoid_staircase">
+            <label class="option_label">Avoid staircase</label> <br>
             <input class="spinner" name="astar_weight" value="1">
             <label class="option_label">Weight</label> <br>
           </div>
