Ability to track nodes tested by Jump Point Search's recursion. The visual interface has been updated with a checkbox to enable / disable this representation.

--- a/visual/index.html
+++ b/visual/index.html
@@ -145,6 +145,13 @@
             <input type="radio" name="jump_point_heuristic" value="chebyshev"/>
             <label class="option_label">Chebyshev</label> <br>
           </div>
+          <header class="option_header">
+            <h3>Options</h3>
+          </header>
+          <div class="optional sub_options">
+            <input type="checkbox" class="track_jump_recursion" checked>
+            <label class="option_label">Visualize recursion</label> <br>
+            
         </div>
       </div><!-- .accordion -->
     </div><!-- #algorithm_panel -->
