fix: close div tag

--- a/visual/index.html
+++ b/visual/index.html
@@ -151,6 +151,7 @@
           <div class="optional sub_options">
             <input type="checkbox" class="track_jump_recursion" checked>
             <label class="option_label">Visualize recursion</label> <br>
+          </div>
             
         </div>
       </div><!-- .accordion -->
