Add minified PF to lib folder. Fix path in index.html

--- a/visual/index.html
+++ b/visual/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.slider.min.js"></script>
 
-    <script type="text/javascript" src="../lib/pathfinding-browser.min.js"></script>
+    <script type="text/javascript" src="./lib/pathfinding-browser.min.js"></script>
 
     <script type="text/javascript" src="./js/view.js"></script>
     <script type="text/javascript" src="./js/controller.js"></script>
