--- a/visual/index.html
+++ b/visual/index.html
@@ -246,5 +246,13 @@
       Project Hosted on <a href="http://github.com/qiao/PathFinding.js">Github</a>
     </footer>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-52996509-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
