added octile heuristic

--- a/visual/index.html
+++ b/visual/index.html
@@ -56,6 +56,8 @@
             <label class="option_label">Manhattan</label> <br>
             <input type="radio" name="astar_heuristic" value="euclidean"/>
             <label class="option_label">Euclidean</label> <br>
+            <input type="radio" name="astar_heuristic" value="octile"/>
+            <label class="option_label">Octile</label> <br>
             <input type="radio" name="astar_heuristic" value="chebyshev"/>
             <label class="option_label">Chebyshev</label> <br>
           </div>
@@ -85,6 +87,8 @@
             <label class="option_label">Manhattan</label> <br>
             <input type="radio" name="ida_heuristic" value="euclidean"/>
             <label class="option_label">Euclidean</label> <br>
+            <input type="radio" name="ida_heuristic" value="octile"/>
+            <label class="option_label">Octile</label> <br>
             <input type="radio" name="ida_heuristic" value="chebyshev"/>
             <label class="option_label">Chebyshev</label> <br>
           </div>
@@ -130,6 +134,8 @@
             <label class="option_label">Manhattan</label> <br>
             <input type="radio" name="bestfirst_heuristic" value="euclidean"/>
             <label class="option_label">Euclidean</label> <br>
+            <input type="radio" name="bestfirst_heuristic" value="octile"/>
+            <label class="option_label">Octile</label> <br>
             <input type="radio" name="bestfirst_heuristic" value="chebyshev"/>
             <label class="option_label">Chebyshev</label> <br>
           </div>
@@ -172,6 +178,8 @@
             <label class="option_label">Manhattan</label> <br>
             <input type="radio" name="jump_point_heuristic" value="euclidean"/>
             <label class="option_label">Euclidean</label> <br>
+            <input type="radio" name="jump_point_heuristic" value="octile"/>
+            <label class="option_label">Octile</label> <br>
             <input type="radio" name="jump_point_heuristic" value="chebyshev"/>
             <label class="option_label">Chebyshev</label> <br>
           </div>
@@ -194,6 +202,8 @@
             <label class="option_label">Manhattan</label> <br>
             <input type="radio" name="orth_jump_point_heuristic" value="euclidean"/>
             <label class="option_label">Euclidean</label> <br>
+            <input type="radio" name="orth_jump_point_heuristic" value="octile"/>
+            <label class="option_label">Octile</label> <br>
             <input type="radio" name="orth_jump_point_heuristic" value="chebyshev"/>
             <label class="option_label">Chebyshev</label> <br>
           </div>
@@ -216,6 +226,8 @@
             <label class="option_label">Manhattan</label> <br>
             <input type="radio" name="trace_heuristic" value="euclidean"/>
             <label class="option_label">Euclidean</label> <br>
+            <input type="radio" name="trace_heuristic" value="octile"/>
+            <label class="option_label">Octile</label> <br>
             <input type="radio" name="trace_heuristic" value="chebyshev"/>
             <label class="option_label">Chebyshev</label> <br>
           </div>
