add random map by perlin noise

--- a/visual/index.html
+++ b/visual/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.slider.min.js"></script>
 
+    <script type="text/javascript" src="./lib/perlin.js"></script>
+
     <script type="text/javascript" src="./lib/pathfinding-browser.min.js"></script>
 
     <script type="text/javascript" src="./js/view.js"></script>
@@ -223,6 +225,7 @@
       <button id="button1" class="control_button">Start Search</button>
       <button id="button2" class="control_button">Pause Search</button>
       <button id="button3" class="control_button">Clear Walls</button>
+      <button id="button4" class="control_button">Random Map</button>
     </div>
 
     <div id="stats"></div>
