--- a/visual/index.html
+++ b/visual/index.html
@@ -48,7 +48,7 @@
             <h3>Options</h3>
           </header>
           <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
+            <input type="checkbox" class="allow_diagonal" >
             <label class="option_label">Allow Diagonal</label> <br>
             <input class="spinner" name="astar_weight" value="1">
             <label class="option_label">Weight</label> <br>
@@ -61,7 +61,7 @@
             <h3>Options</h3>
           </header>
           <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
+            <input type="checkbox" class="allow_diagonal" >
             <label class="option_label">Allow Diagonal</label> <br>
           </div>
         </div>
@@ -80,7 +80,7 @@
             <h3>Options</h3>
           </header>
           <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
+            <input type="checkbox" class="allow_diagonal" >
             <label class="option_label">Allow Diagonal</label> <br>            
           </div>
         </div>
@@ -91,7 +91,7 @@
             <h3>Options</h3>
           </header>
           <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
+            <input type="checkbox" class="allow_diagonal" >
             <label class="option_label">Allow Diagonal</label> <br>
           </div>
         </div>
