--- a/visual/index.html
+++ b/visual/index.html
@@ -29,6 +29,8 @@
   </head>
   <body>
     <div id="draw_area"></div>
+    <div id="draw_area"></div>
+
 
     <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
