--- a/visual/index.html
+++ b/visual/index.html
@@ -30,10 +30,14 @@
   <body>
     <div id="draw_area"></div>
 
+    <div id="show_instructions_panel" class="panel">
+      <span id="show_instructions"style="display:none">show</span>
+    </div>
+
     <div id="instructions_panel" class="panel">
       <header>
         <h2 class="header_title">Instructions</h2>
-        <span id="hide_instructions">hide</span>
+        <span id="hide_instructions"onclick="hide_instructions_clicked()">hide</span>
       </header>
       Click within the <span class="white">white</span> grid and drag your mouse to draw obstacles. <br>
       Drag the <span class="green">green</span> node to set the start position. <br>
@@ -42,8 +46,14 @@
       Click Start Search in the lower-right corner to start the animation.
     </div>
 
+    <div id="show_algorithms_panel" class="panel">
+          <span id="show_algorithms"style="display:none">show</span>
+        </div>
+
     <div id="algorithm_panel" class="panel right_panel">
-      <header><h2 class="header_title">Select Algorithm</h2></header>
+      <header><h2 class="header_title">Select Algorithm</h2>
+        <span id="hide_algorithms"onclick="hide_algorithms_clicked()">hide</span>
+      </header>
 
       <div class="accordion">
         <h3 id="astar_header"><a href="#">A*</a></h3>
